# TeamRun

./: .env.example  .gitignore  ABOUT.md  DESIGN.md  README.md  pyproject.toml
docs/: README_CN.md
tests/: test_config.py  test_scheduler.py  test_state_manager.py  test_todo_parser.py  test_tools.py
trun/: __init__.py  cli.py  config.py
trun/adapters/: __init__.py  base.py  claude_code.py  codex.py  factory.py  mock.py
trun/llm/: __init__.py  service_llm.py
trun/scheduler/: __init__.py  replan.py  scheduler.py  state_manager.py
trun/todo/: __init__.py  generator.py  models.py  parser.py
trun/tools/: __init__.py  file_ops.py  git_ops.py  shell.py  web_search.py
trun/utils/: env.py  logger.py
trun/validators/: __init__.py  base.py  factory.py  file_validator.py  llm_validator.py  schema_validator.py  test_validator.py
